--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-   <header class="header"></header>
-  <main class="main"></main>
-<footer class="footer"></footer>
+   <header class="header">
+    <a class="logo" href="#">logo</a>
+   </header>
+  <main class="main">
+    <p class="text">text</p>
+  </main>
+<footer class="footer">
+  <a href="" class="link">link</a>
+</footer>
 </body>
 </html>
