--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
    <header class="header">
     <a class="logo" href="#">logo</a>
+    <p class="logo-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, laboriosam numquam ad tempora aut facere assumenda doloribus consequuntur sunt adipisci obcaecati, nostrum tenetur modi dolores dignissimos, quae perferendis illum pariatur.</p>
    </header>
   <main class="main">
     <p class="text">text</p>
